# cast-value.rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  zensical.toml
.github/: zizmor.yml
.github/workflows/: CI.yml  benchmarks.yml  cd.yml  ci.yml  conventional-commits.yml  docs.yml  zizmor.yml
core/: Cargo.toml
core/benches/: comparison.rs  conversions.rs
core/examples/: check_simd.rs  zarrs_integration.rs
core/src/: lib.rs  simd.rs
core/src/simd/: aarch64.rs  avx.rs  avx2.rs  generic.rs  mod.rs  wasm32.rs
docs/: design.md  getting-started.md  index.md  python-api.md  rust-api.md
python/: Cargo.toml  pyproject.toml
python/examples/: float_to_int.py
python/src/: lib.rs
python/tests/: conftest.py  test_cast_array.py  test_cast_array_into.py  test_errors.py  test_scalar_map.py
python/zarr_cast_value/: __init__.py  __init__.pyi
