[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "cast_value_rs._cast_value_rs"

[project]
name = "cast-value-rs"
description = "Python bindings for the Zarr cast_value codec"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
test = ["pytest", "numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
